projects/nala/reports/login.login/2022.08.30.20.10.11.796/login.login/execution_info.log
20:10:11.991 INFO Test execution started: login.login
20:10:11.991 INFO Browser: chrome
20:10:11.991 ERROR SyntaxError: invalid syntax
  File "/home/lautaro/test_directory/projects/nala/tests/login/login.py", line 6
    navigate(https://es.wikipedia.org/wiki/Wikipedia:Portada)
                  ^
SyntaxError: invalid syntax

